--- a/2017/Fake-University/uniCSS.css
+++ b/2017/Fake-University/uniCSS.css
@@ -34,8 +34,7 @@
     border-radius: 8px;
 }
 
-@media screen and (min-width : 900px) 
-{
+@media screen and (max-width: 50em) {
     #primary
     {
         float: left;
@@ -148,8 +147,10 @@ h1
     display: none;
 }
 
-@media screen and (max-width: 600px)
-{
+@media screen and (min-width: 425px) {
+    body {
+        background-color: red;
+    }
     .topnav a:not(:first-child)
     {
         display: none;
