--- a/2017/Fake-University/uniCSS.css
+++ b/2017/Fake-University/uniCSS.css
@@ -1,3 +1,39 @@
+
+header {
+    background-color: midnightblue;
+}
+
+.topnav
+    {
+        overflow: hidden;
+        top: 0;
+        width: 100%;
+    }
+
+    .topnav a
+    {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 8px 10px;
+        text-decoration: none;
+        font-size: 20px;
+    }
+    .topnav .icon
+    {
+        display: none;
+    }
+    .logo {
+        font-size: 30px;
+        color: white;
+        font-weight: bold;
+    }
+    nav {
+        padding-left: 6em;
+        margin-top: -4em;
+    }
+
 .wrap
 {
     max-width: 1400px;
@@ -34,6 +70,10 @@
     border-radius: 8px;
 }
 
+@media screen and (max-width: 600px) {
+
+}
+
 @media screen and (max-width: 50em) {
     #primary
     {
@@ -41,7 +81,9 @@
         width: 65%;
         padding-right: 1em;
     }
- 
+    body {
+        background-color: pink;
+    }
     #secondary,
     #tertiary
     {
@@ -81,15 +123,8 @@ html
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     align-content:center;
-    background-color: midnightblue;
     margin: 0;
     padding: 0;
-}
-
-img
-{
-    max-width: 100%;
-    height: auto;
 }
 
 body
@@ -109,31 +144,8 @@ footer
 
 h1
 {
-    
-    float: left;
-    font-size: 28px;
     font-family: times;
     color: white;
-    column-rule: 4px outset white;
-}
-
-.topnav
-{
-    overflow: hidden;
-    top: 0;
-    width: 100%;
-    background-color: midnightblue;
-}
-
-.topnav a
-{
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 8px 10px;
-    text-decoration: none;
-    font-size: 20px;
 }
 
 .topnav a:hover 
@@ -142,15 +154,7 @@ h1
     color: black;
 }
 
-.topnav .icon
-{
-    display: none;
-}
-
-@media screen and (min-width: 425px) {
-    body {
-        background-color: red;
-    }
+@media screen and (max-width: 700px) {
     .topnav a:not(:first-child)
     {
         display: none;
