--- a/2017/Cleaning-Business/style.css
+++ b/2017/Cleaning-Business/style.css
@@ -310,5 +310,7 @@ img {
   padding: 1px; }
 
 /*# sourceMappingURL=style.css.map */
+html {
+  opacity: 0; }
 
 /*# sourceMappingURL=style.css.map */
