--- a/styles.scss
+++ b/styles.scss
@@ -108,6 +108,7 @@ header a:hover {
 
 #thirdSection {
     background-color: $secondary-color;
+    padding: 0 10px 0 10px;
 }
 
 #firstSection, #work {
