--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,9 @@ header a:hover {
     margin-left: 15%;
     background-color: #f5f5dc;
     padding: 0px 50px 30px 20px; } }
+footer {
+  padding-left: 17em; }
+
 /*****************************/
 
 /*# sourceMappingURL=styles.css.map */
