--- a/2018/DryOar/style.scss
+++ b/2018/DryOar/style.scss
@@ -238,21 +238,18 @@ p
   .rightcol
   {
     width: 45%;
-    float: none;
+    float: right;
     padding: 10px;
-    @include breakpoint(large) {
-      float: right;
-    }
   }
   #sec1
   {
-      padding: 10px;
+    padding: 10px;
   }
       
   #sec2
   {  
-      background-color: #FBFFB9;
-      padding: 10px;
+    background-color: #FBFFB9;
+    padding: 10px;
   }
           
   #sec3
@@ -314,18 +311,23 @@ p
           
   .contactImage
   {
+    display: none;
+    width: 10%;
+    @include breakpoint(large) {
       height: 350px;
-      width: 450px; 
+      width: 450px;
+      display: block;
+    } 
   }
   /*Images Styles end*/   
   .nameClassCopy
   {
-      float: left;
+    float: left;
   }
           
   .socialIcons
   {
-      float: right;
+    float: right;
   }
 
 }
