--- a/2018/DryOar/style.css
+++ b/2018/DryOar/style.css
@@ -207,21 +207,18 @@ p {
     width: 40px;
     height: 40px; }
 
-  .contactImage {
-    display: none;
-    width: 10%; } }
-  @media screen and (min-width: 760px) and (min-width: 50em) {
-    .contactImage {
-      height: 350px;
-      width: 450px;
-      display: block; } }
-
-@media screen and (min-width: 760px) {
   /*Images Styles end*/
   .nameClassCopy {
     float: left; }
 
   .socialIcons {
     float: right; } }
+#contactImage {
+  display: none; }
+  @media (min-width: 50em) {
+    #contactImage {
+      height: 350px;
+      width: 450px;
+      display: block; } }
 
 /*# sourceMappingURL=style.css.map */
