--- a/2018/DryOar/style.scss
+++ b/2018/DryOar/style.scss
@@ -308,17 +308,6 @@ p
       width: 40px;
       height: 40px;
   }
-          
-  .contactImage
-  {
-    display: none;
-    width: 10%;
-    @include breakpoint(large) {
-      height: 350px;
-      width: 450px;
-      display: block;
-    } 
-  }
   /*Images Styles end*/   
   .nameClassCopy
   {
@@ -330,4 +319,13 @@ p
     float: right;
   }
 
+}
+
+#contactImage{
+  @include breakpoint(large) {
+    height: 350px;
+    width: 450px;
+    display: block;
+  } 
+  display: none;
 }
