--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 body {
   font-family: Helvetica, Arial, sans-serif;
   margin: 0 auto;
-  background-color: #f5f5dc; }
+  background-color: white; }
 
 main {
   padding: 2em;
@@ -52,12 +52,12 @@ header {
 
 /* Header Links Styles */
 header a {
-  color: #f5f5dc;
+  color: white;
   text-decoration: none;
   font-weight: bold; }
 
 header a:visited {
-  color: #f5f5dc;
+  color: white;
   text-decoration: none; }
 
 header a:active {
@@ -73,11 +73,10 @@ header a:hover {
   flex-flow: row wrap; }
 
 #thirdSection {
-  background-color: #F0E68C;
   padding: 0 10px 0 10px; }
   @media (min-width: 50em) {
     #thirdSection {
-      background-color: #f5f5dc; } }
+      background-color: white; } }
 
 #firstSection, #work {
   display: flex;
@@ -85,12 +84,11 @@ header a:hover {
   border-bottom: 1px solid gray; }
 
 #skills {
-  background-color: #F0E68C;
   padding: 0px 50px 30px 20px; }
   @media (min-width: 50em) {
     #skills {
       margin-left: 15%;
-      background-color: #f5f5dc; } }
+      background-color: white; } }
 
 @media (min-width: 50em) {
   #skills, #about-me, #biggerPrj, #smallerPrj {
@@ -98,7 +96,7 @@ header a:hover {
 
   #smallerPrj {
     margin-left: 15%;
-    background-color: #f5f5dc;
+    background-color: white;
     padding: 0px 50px 30px 20px; } }
 footer {
   padding-left: 17em; }
