--- a/styles.scss
+++ b/styles.scss
@@ -142,7 +142,17 @@ header a:hover {
 }
 
 footer {
-    padding-left: 17em;
+    @include breakpoint(large) {
+        padding-left: 17em;
+    }
+    & ul {
+        display: flex;
+        list-style-type: none;
+        text-decoration: none;
+        & li {
+            padding-right: 20px;
+        }
+    }
 }
 
 /*****************************/
