--- a/styles.css
+++ b/styles.css
@@ -68,10 +68,6 @@ header a:hover {
 
 /**********************/
 /*Skills Styles*/
-#work {
-  display: flex;
-  flex-flow: row wrap; }
-
 #thirdSection {
   padding: 0 10px 0 10px; }
   @media (min-width: 50em) {
@@ -79,6 +75,7 @@ header a:hover {
       background-color: white; } }
 
 #firstSection, #work {
+  width: 100%;
   display: flex;
   flex-flow: row wrap;
   border-bottom: 1px solid gray; }
