--- a/styles.scss
+++ b/styles.scss
@@ -100,12 +100,6 @@ header a:hover {
 
 /*Skills Styles*/
 
-
-#work {
-    display: flex;
-    flex-flow: row wrap;
-}
-
 #thirdSection {
     ///background-color: $secondary-color;
     padding: 0 10px 0 10px;
@@ -115,6 +109,7 @@ header a:hover {
 }
 
 #firstSection, #work {
+    width: 100%;
     display: flex;
     flex-flow: row wrap;
     border-bottom: 1px solid gray;
