--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,10 @@ header a:hover {
     #thirdSection {
       background-color: white; } }
 
+#thirdSection[data-aos-duration='4000'] [data-aos],
+[data-aos][data-aos][data-aos-duration='4000'] {
+  transition-duration: 4000ms; }
+
 #firstSection, #work {
   width: 100%;
   display: flex;
