--- a/styles.scss
+++ b/styles.scss
@@ -108,6 +108,11 @@ header a:hover {
     }
 }
 
+#thirdSection[data-aos-duration='4000'] [data-aos],
+  [data-aos][data-aos][data-aos-duration='4000'] {
+    transition-duration: 4000ms;
+  }
+
 #firstSection, #work {
     width: 100%;
     display: flex;
