--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,9 @@ header {
   text-align: center;
   background-color: #4169e1; }
   header > div > img {
-    width: 60%;
+    width: 20%;
     border-radius: 50%;
+    float: left;
     border: 2px solid gray; }
   header nav ul {
     display: flex; }
@@ -42,7 +43,8 @@ header {
       position: fixed;
       text-align: right; }
       header > div > img {
-        width: 100%; }
+        width: 100%;
+        float: none; }
       header nav ul {
         display: block;
         margin-left: 0; }
