--- a/styles.scss
+++ b/styles.scss
@@ -43,8 +43,9 @@ header {
     text-align: center;
     background-color: $primary;
     & > div > img {
-        width: 60%;
+        width: 20%;
         border-radius: 50%;
+        float: left;
         border: 2px solid gray;
     }
     & nav ul {
@@ -63,6 +64,7 @@ header {
         text-align: right;
         & > div > img {
             width: 100%;
+            float: none;
         }
         & nav ul {
             display: block;
