--- a/styles.scss
+++ b/styles.scss
@@ -54,6 +54,7 @@ header {
     & nav ul {
         display: flex;
         & li {
+        margin-left: -20px;
         padding-right: 1em;
         text-decoration: none;
         list-style-type: none;
