--- a/2020/SLM-Prototype/styles.css
+++ b/2020/SLM-Prototype/styles.css
@@ -116,9 +116,7 @@ body {
 }
 
 #activity {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -138,6 +136,7 @@ body {
 }
 
 #invite {
+  display: none;
   text-align: center;
 }
 /*# sourceMappingURL=styles.css.map */
