--- a/styles.css
+++ b/styles.css
@@ -10354,6 +10354,12 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem;
 }
+.budget-content {
+  width: 100%;
+  max-width: 1080px;
+  margin: 0 auto;
+  margin-top: 25px;
+}
 .card-icon {
   width: 75px;
 }
